--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "react-paginate": "^8.1.3",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.1",
+    "react-router-hash-link": "^2.4.3",
     "react-scripts": "4.0.3",
     "react-slick": "^0.29.0",
     "reactstrap": "^9.0.1",
