--- a/mobile/package.json
+++ b/mobile/package.json
@@ -14,7 +14,10 @@
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
     "@react-navigation/stack": "^6.3.16",
+    "axios": "^1.3.5",
+    "dotenv": "^16.0.3",
     "expo": "~48.0.9",
+    "expo-constants": "^14.2.1",
     "expo-status-bar": "~1.4.4",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
